# Minecraft_OpenGL_version1

./: CMakeLists.txt  README.md  requiment.txt
docs/: docs.txt
glad/: glad.c  glad.h
shaders/: general_fragment_shader.frag  general_vertex_shader.vert
src/: Camera.cpp  Camera.h  EBO.h  Mesh.cpp  Mesh.h  Texture.h  VAO.h  VBO.h  default.vert  learn.cpp  main.cpp  shaderClass.h
